pre-final commit (with price and button)

--- a/src/Components/Category.css
+++ b/src/Components/Category.css
@@ -37,3 +37,15 @@
     height: auto;
     padding: 20px;
 }
+
+.priceAndButtonBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.travelPrice {
+    color: red;
+    font-weight: bold;
+}
