--- a/src/Components/Category.css
+++ b/src/Components/Category.css
@@ -11,6 +11,8 @@
 
 .title-categories {
     padding: 20px;
+    font-weight: bold;
+    font-size: 30px !important;
 }
 
 .subsequenceColour, .card-title a{
